Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/master_online-store.yml
+++ b/.github/workflows/master_online-store.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Setup Java Sdk ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v1
-        with: 
+        with: |+
           java-version: ${{ env.JAVA_VERSION }}
 
       - name: 'Restore Project Dependencies Using Mvn'
@@ -40,9 +40,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_691BC2448AF642C18C97402819D70FFE }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C41A3D67DB414520B059770E769774E0 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_68CF6B174F954387AC0E4CE2004AA2A2 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_08CB0F4DDE24495EA880AE6A69F383CF }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3C5A3D531F1041C4BF8F61FD6F664846 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6CEE22A26D6949A6ADB6D6743486C2BC }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
@@ -52,5 +52,4 @@ jobs:
           slot-name: 'Production'
           package: '${{ env.PACKAGE_DIRECTORY }}'
           respect-pom-xml: true
-
           
